--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/node": "^14.11.2",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
   }
